--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/cities?characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/weatherdb?characterEncoding=utf8
 jdbc.username=root
 jdbc.password=mousehole
